--- a/global-styles.css
+++ b/global-styles.css
@@ -13,6 +13,7 @@ body {
     max-width: 1200px;
     margin: 20px;
     padding: 40px;
+    align-self:flex-start;
 }
 
 .navbar {
@@ -36,4 +37,8 @@ body {
 .navbar .nav-btn a {
     color: black;
     text-decoration: none;
+}
+
+h2 {
+    margin-top: 40px;     
 }
