--- a/global-styles.css
+++ b/global-styles.css
@@ -10,17 +10,18 @@ body {
 
 .container {
     background-color: beige;
-    max-width: 1200px;
+    /* max-width: 1865px; */
+    justify-self: center;
+    width: 100%;
+    height: 100%;
     margin: 20px;
     padding: 40px;
-    align-self:flex-start;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    display: fixed;
 }
 
 .navbar h1 {
@@ -41,9 +42,50 @@ body {
 }
 
 h2 {
-    margin-top: 40px;     
+    margin: 40px 0;
 }
 
-.cards{
+.cardsWrapper {
     display: grid;
+    grid-template-areas:
+        'card1 card2'
+        'card3 card4';
+    gap: 30px;
 }
+
+.card-link {
+    display: grid;
+    grid-template-columns:repeat(2, 1fr) ;
+    grid-template-rows: repeat(3 ,1fr);
+    gap: 10px;
+    border: 3px solid lightgray;
+    border-radius: 3px;
+    padding: 15px;
+    text-decoration: none;
+    color: black;
+}
+
+.card-link .card-img {
+    grid-area: 1 / 1 / 3 / 2;
+    border-radius: 7px;
+    width: 22vw;
+}
+
+.card-link .reporter-name {
+    grid-area: 1 / 2 / 2 / 3;
+    margin-top: 20px;
+    font-size: x-large;
+}
+
+.card-link .news-title {
+     grid-area: 2 / 2 / 3 / 3;
+     font-size: xx-large;
+}
+
+.card-link .artical-text {
+    grid-area: 3 / 1 / 4 / 3;
+    font-size: xx-large;
+}
+
+
+/* replace with */
